--- a/cell03/ex00/backgroound.css
+++ b/cell03/ex00/backgroound.css
@@ -3,9 +3,20 @@
     padding: 4px;
     margin: 0;
 }
-
+.container {
+    width: 100%;
+    height: 100dvh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 button {
-    padding: 10px 20px;
+    padding: 20px 40px;
     font-size: 16px;
     cursor: pointer;
+    font-size: 20px;
+    background-color: black;
+    color: white;
+    border: none;
+    border-radius: 8px;
 }
