--- a/cell03/ex04/ex01bis/balloon.css
+++ b/cell03/ex04/ex01bis/balloon.css
@@ -1,15 +1,16 @@
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    background-color: white;
+
+}
+
 #balloon {
     width: 200px;
     height: 200px;
     border-radius: 100%;
     background-color: red;
-    transition: width 0.3s, height 0.3s;
-}
-
-.container {
-    width: 100%;
-    height: 100dvh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
